# pyturbowizard

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  LegalNotice_part1.txt  LegalNotice_part2.txt  README.md  expressionTemplate_compressor_comp.tsv  expressionTemplate_turbine_comp.tsv  import.py  main.py  main_study.py  mesh_import.py  meshimport.py  mysetup.py  numerics.py  parametricstudy.py  postproc.py  ptw_main.py  pyproject.toml  setup.py  solve.py  tts_main.py  turboExpressionTemplate.tsv  turboSetupConfig.json  turboSetupConfig_darmstadt.json  turboStudyConfig.json  utilities.py
.github/: CODEOWNERS  dependabot.yml  labeler.yml  labels.yml
Documentation/: ConfigFile.md
doc/: ConfigFile.md
ptw_documentation/: ConfigFile.md  LegalNotice
ptw_misc/: material_lib.json  mergePlotsInput.json  merge_plots.py
ptw_subroutines/: launcher.py  meshimport.py  numerics.py  parametricstudy.py  parametricstudy_post.py  post_plots.py  postproc.py  prepostproc.py  ptw_logger.py  setupcfd.py  solve.py  utilities.py
ptw_templates/: expressionTemplate_GE_turbine_comp-level1.tsv  expressionTemplate_GE_turbine_comp.tsv  expressionTemplate_cascade_comp.tsv  expressionTemplate_centrifugalPump_incomp.tsv  expressionTemplate_compressor_comp.tsv  expressionTemplate_compressor_comp_v241.tsv  expressionTemplate_compressor_incomp.tsv  expressionTemplate_fan_comp.tsv  expressionTemplate_fan_comp_v241.tsv  expressionTemplate_fan_incomp.tsv  expressionTemplate_pump_incomp.tsv  expressionTemplate_pump_incomp_mod1.tsv  expressionTemplate_turbine_comp.tsv  expressionTemplate_turbine_comp_v241.tsv  expressionTemplate_turbine_incomp.tsv
src/: ptw_main.py
(+104 files in other folders)
