[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"


[project]
# Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
name = "ansys-ptw"
version = "0.1.dev0"
description = "PyTurboWizard (PTW) provides Pythonic way to setup & run a turbomachinery simulation with Ansys Fluent."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = {file = "LICENSE"}
authors = [{ name = "ANSYS, Inc.", email = "pyansys.core@ansys.com" }]
maintainers = [{ name = "ANSYS, Inc.", email = "pyansys.core@ansys.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "ansys-fluent-core>=0.20.0",
    "numpy>=1.14.0,<3.0.0",
    "pandas>=1.1.0,<3.0.0",
    "pyyaml>=6.0",
    "matplotlib>=3.10.0",
]


[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 100

# ========================================================
# Flake8 Configuration
# ========================================================

[tool.flake8]
exclude = ["venv", "__init__.py", "doc/_build", ".venv"]
select = [
    "W191", "W291", "W293", "W391", "E115", "E117",
    "E122", "E124", "E125", "E225", "E231", "E301",
    "E303", "E501", "F401", "F403"
]
count = true
max-complexity = 10
max-line-length = 100
statistics = true

[tool.flit.module]
name = "ansys.ptw"

src_paths = ["doc", "src"]

[project.scripts]
ansys-ptw = "ansys.ptw.main:ptw_main"
